complete second lab

--- a/code/asd_app/CMakeLists.txt
+++ b/code/asd_app/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.8)
-project(lnch_opts)
+project(asd_app)
 
-add_executable(${PROJECT_NAME} main.cpp  lnch_opts.cpp lnch_opts.hpp ${SRC_FILES})
+add_executable(${PROJECT_NAME} main.cpp ${SRC_FILES})
 
 target_include_directories(${PROJECT_NAME}
                            PRIVATE ${PROJECT_ROOT}/code/asd_core/inc)
+
+target_link_libraries(${PROJECT_NAME} asd_core)
