The big refactoring From university work to lib with templates

--- a/code/asd_app/CMakeLists.txt
+++ b/code/asd_app/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(asd_app)
+project(asd_app CXX)
 
 add_executable(${PROJECT_NAME} main.cpp ${SRC_FILES})
 
